option('cli',
  type: 'boolean',
  value: true,
  description: 'Build CLI executable'
)

option('install_lib',
  type: 'boolean',
  value: false,
  description: 'Install ftn2xml static library and headers'
)

option('install_docs',
  type: 'boolean',
  value: false,
  description: 'Install documentation files'
)

option('pdf_export',
  type: 'feature',
  value: 'auto',
  description: 'Enable PDF export via libpodofo'
)
